Log screen changed

--- a/fiddi_app/templates/signup.html
+++ b/fiddi_app/templates/signup.html
@@ -96,8 +96,8 @@
             </div>
             <div class="column" >
                 <br><br><br><br><br><br>
-                <p class="text-base" style="font-size: 200%; text-align: left; font-weight: bolder;"> Surge SE Internship</p><br>
-                <p class="text-base" style="font-size: 150%; text-align: left;"> March 2023</p><br><br><br><br>
+                <p class="text-base" style="font-size: 200%; text-align: left; font-weight: bolder;">Fiddi Network</p><br>
+                <p class="text-base" style="font-size: 150%; text-align: left;">A Social Media Application</p><br><br><br><br>
 
                 <a class="text-base" href="https://firnasahmed.github.io/me/" style="font-size: 190%; text-align: left; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;" target="_blank">Firnas Ahamed</a>
             </div>
